# MOBL_PMD_ALPHA

./: settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/example/mobl_pmd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/melodies/: fishy_aroma.mid  life.mid  wingless.mid
app/src/main/cpp/: CMakeLists.txt  PolyphonedSynth.cpp  PolyphonedSynth.h  mpmd.cpp
app/src/main/cpp/fmgen/: fmgen.h  opna.cpp  opna.h  psg.cpp  psg.h
app/src/main/java/com/example/mobl_pmd/: ChannelVisualFragment.java  FileExploreActivity.java  InstrumentBank.java  MainActivity.java  MidiPlayerFast.java  MusicVisualizer.java  NotInitializedException.java  OPNOscillator.java  OPNSynthesizer.java  PianoFragment.java  PianoVisualView.java  PlayButtonFragment.java  PlayerActivity.java
app/src/main/java/javax/sound/midi/: ControllerEventListener.java  InvalidMidiDataException.java  MetaEventListener.java  MetaMessage.java  MidiDevice.java  MidiDeviceReceiver.java  MidiDeviceTransmitter.java  MidiEvent.java  MidiFileFormat.java  MidiMessage.java  MidiSystem.java  Patch.java  Receiver.java  Sequence.java  Sequencer.java  ShortMessage.java  SysexMessage.java  Track.java  Transmitter.java
app/src/main/java/javax/sound/midi/impl/: MidiChannelImpl.java  SequencerImpl.java
app/src/main/java/javax/sound/midi/io/: StandardMidiFileReader.java  StandardMidiFileWriter.java
app/src/main/java/javax/sound/midi/spi/: MidiDeviceProvider.java
app/src/main/res/layout/: activity_file_explore.xml  activity_main.xml  activity_player.xml  file_element.xml  fragment_channel_visual.xml  fragment_piano.xml  fragment_play_button.xml
app/src/main/res/raw/: instruments.mml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mobl_pmd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
